--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,13 @@
     "forceConsistentCasingInFileNames": true,
     "sourceMap": true,
     "declaration": true,
-    "jsx": "react"
+    "jsx": "react",
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "types": [
+      "jasmine"
+    ]
   },
   "files": [
     "./src/index.ts"
