--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "clean": "yarn cache clean && yarn run rimraf -- node_modules _bundles lib",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --host localhost.cisco.com --port 8000 --config webpack.demo.js --history-api-fallback --content-base demo",
     "lint": "yarn run tslint --project tsconfig.json \"src/**/*.ts\"",
-    "postinstall": "yarn run build",
     "preclean:install": "yarn run clean",
     "rimraf": "rimraf",
     "standard": "standard index.js",
     "tslint": "tslint",
-    "webpack": "webpack"
+    "webpack": "webpack",
+    "test": "karma start"
   },
   "peerDependencies": {
     "@angular/common": "2.x || 4.x",
@@ -40,20 +40,30 @@
     "@angular/core": "^4.2.4",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
+    "@types/jasmine": "^2.5.53",
     "awesome-typescript-loader": "^3.1.3",
     "codelyzer": "^3.1.1",
     "core-js": "^2.4.1",
     "cross-env": "^5.0.1",
+    "ghooks": "^1.2.4",
+    "jasmine": "^2.6.0",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-firefox-launcher": "^1.0.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-safari-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.3",
     "rimraf": "^2.6.1",
     "rxjs": "^5.4.1",
+    "standard": "^8.4.0",
     "tslint": "^5.4.3",
     "typescript": "^2.3.4",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0",
     "webpack-rxjs-externals": "^1.0.0",
-    "zone.js": "^0.8.12",
-    "ghooks": "^1.2.4",
-    "standard": "^8.4.0"
+    "zone.js": "^0.8.12"
   },
   "config": {
     "ghooks": {
