--- a/package.json
+++ b/package.json
@@ -41,22 +41,33 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@types/jasmine": "^2.5.53",
+    "@types/jasmine-jquery": "^1.5.31",
+    "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.1.3",
     "codelyzer": "^3.1.1",
     "core-js": "^2.4.1",
     "cross-env": "^5.0.1",
     "ghooks": "^1.2.4",
+    "istanbul-instrumenter-loader": "^2.0.0",
     "jasmine": "^2.6.0",
+    "jasmine-jquery": "^2.1.1",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
     "karma-firefox-launcher": "^1.0.1",
     "karma-jasmine": "^1.1.0",
+    "karma-jasmine-jquery": "^0.1.1",
+    "karma-mocha-reporter": "^2.2.3",
     "karma-phantomjs-launcher": "^1.0.4",
+    "karma-remap-coverage": "^0.1.4",
     "karma-safari-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.3",
+    "node-sass": "^4.5.3",
     "rimraf": "^2.6.1",
     "rxjs": "^5.4.1",
+    "sass-loader": "^6.0.6",
+    "source-map-loader": "^0.2.1",
     "standard": "^8.4.0",
     "tslint": "^5.4.3",
     "typescript": "^2.3.4",
@@ -69,5 +80,8 @@
     "ghooks": {
       "pre-commit": "yarn run standard"
     }
+  },
+  "dependencies": {
+    "qs": "^6.5.0"
   }
 }
