--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "standard": "standard index.js",
     "tslint": "tslint",
     "webpack": "webpack",
-    "test": "nyc ./node_modules/.bin/ava -v",
+    "test": "karma start",
+    "test:ci": "./node_modules/.bin/karma start --single-run --browsers PhantomJS",
     "report-coverage": "nyc report --reporter=lcov > coverage.lcov && codecov"
   },
   "peerDependencies": {
